src/App.css
@import "./fonts/font.css";

#root {
  margin: 0 auto;
  padding: 0;
  text-align: center;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

#bodyTest {
  max-width: 500px;
  align-self: center;
}

h1 {
  font-size: 22vw;
  font-family: 'Emitha-Script';
  color: #CEA300;
}

h2 {
  color: #CEA300;
}

.ImageHeader {
  background-image: url('./assets/Header/WeddingHeaderWide.jpg');
  background-position: center top;
  min-width: 100%;
  padding-bottom: 1em;
  padding-top: 1em;
  margin-bottom: 5em;
  margin-top: 0;
}

#testClass {
  background-color: aqua;
}

